--- a/index.html
+++ b/index.html
@@ -14,40 +14,40 @@
     <table>
         <i><h1 style="font-size: 15px; text-align: center; color: brown;">Table with Different Background - Colours Using Simple Selectors</h1></i>
         <tr>
-            <td style="background-color: rgb(253, 150, 15);">Pat Cummins</td>
-            <td style="background-color: rgb(53, 43, 194);">Travis Head</td>
-            <td style="background-color: rgba(14, 161, 33, 0.973);">Trent Boult</td>
-            <td style="background-color: rgb(109, 33, 180);"> Bhuvaneshwar</td>
-            <td style="background-color: yellow;">Abhishek Sharma</td>
+            <td id=player1>Pat Cummins</td>
+            <td class="player2">Travis Head</td>
+            <td class="player3">Trent Boult</td>
+            <td class="player4"> Bhuvaneshwar</td>
+            <td class="player5">Abhishek Sharma</td>
         </tr>
         <tr>
-            <td style="background-color:rgb(107, 206, 9);">Kane Williamson</td>
-            <td style="background-color:rgba(228, 184, 127, 0.76);">Aiden Markram</td>
-            <td style="background-color:hotpink;">Rashid Khan</td>
-            <td style="background-color: aqua;"> Mitchel Santnar</td>
-            <td style="background-color:rgb(250, 53, 4);">Glenn Philips</td>
+            <td class="player6">Kane Williamson</td>
+            <td class="player7">Aiden Markram</td>
+            <td class="player8">Rashid Khan</td>
+            <td class="player9"> Mitchel Santnar</td>
+            <td class="player10">Glenn Philips</td>
         </tr>
 
         <tr>
-            <td style="background-color:rgb(163, 151, 173);">Suryakumar Yadav</td>
-            <td style="background-color: rgba(9, 126, 9, 0.76);">Jasprit Bumrah</td>
-            <td style="background-color:rgb(211, 200, 107);">Henrich Klassen</td>
-            <td style="background-color:rgb(57, 93, 94);"> Mitchel Starc</td>
-            <td style="background-color:rgb(48, 233, 48);">Liam Livingston</td>
+            <td class="player11">Suryakumar Yadav</td>
+            <td class="player12">Jasprit Bumrah</td>
+            <td class="player13">Henrich Klassen</td>
+            <td class="player14"> Mitchel Starc</td>
+            <td class="player15">Liam Livingston</td>
         </tr>
         <tr>
-            <td style="background-color:rgb(4, 248, 4);">Rohit Sharma</td>
-            <td style="background-color:rgb(81, 107, 107);">David Warner</td>
-            <td style="background-color:rgb(110, 47, 170);">Virat Kholi</td>
-            <td style="background-color:rgb(56, 174, 179);"> Jos Buttler</td>
-            <td style="background-color: rgba(139, 119, 36, 0.664);">Quinten Decock</td>
+            <td class="player16">Rohit Sharma</td>
+            <td class="player17">David Warner</td>
+            <td class="player18">Virat Kholi</td>
+            <td class="player19"> Jos Buttler</td>
+            <td class="player20">Quinten Decock</td>
         </tr>
         <tr>
-            <td style="background-color:rgb(201, 69, 69);">Jhonny Bairstrow</td>
-            <td style="background-color:rgba(255, 225, 191, 0.637);">Rachin Ravindra</td>
-            <td style="background-color: rgb(0, 128, 0);">Hardhik Pandya</td>
-            <td style="background-color:coral;"> Glen Maxwell</td>
-            <td style="background-color:darkorange">David Miller</td>
+            <td class="player21">Jhonny Bairstrow</td>
+            <td class="player22">Rachin Ravindra</td>
+            <td class="player23">Hardhik Pandya</td>
+            <td class="player24"> Glen Maxwell</td>
+            <td class="player25">David Miller</td>
         </tr>
 
 
